Fix hover messages being cut off in Multi File Diff Editor

--- a/src/vs/editor/browser/widget/multiDiffEditor/style.css
+++ b/src/vs/editor/browser/widget/multiDiffEditor/style.css
@@ -32,6 +32,11 @@
 			place-items: center;
 			place-content: center;
 		}
+
+		&.monaco-editor {
+			pointer-events: none;
+			z-index: 1001;
+		}
 	}
 
 	.active {
